load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "hello_world_with_tornado",
    srcs = ["hello_world.py"],
    main = "hello_world.py",
    deps = [
        requirement("tornado")
    ]
)

py_binary(
    name = "hello_world_with_libclang",
    srcs = ["hello_world.py"],
    main = "hello_world.py",
    deps = [
        requirement("libclang")
    ]
)
